# proxqp-unofficial

./: README.md  package.xml  pyproject.toml
.github/workflows/: ci-linux-osx-with-conda.yml  gh-pages.yml  release.yml
examples/julia/: overview-simple.jl
recipe/: meta.yaml
scripts/pip/: pyproject.toml  setup.cfg  setup.py
test/src/: cvxpy.cpp  cvxpy.py
