[metadata]
name = proxsuite
description = Quadratic Programming Solver for Robotics and beyond.
long_description = file: README.md
long_description_content_type = text/markdown
author = "Antoine Bambade <antoine.bambade@inria.fr>, Justin Carpentier <justin.carpentier@inria.fr>, Sarah El-Kazdadi <aamr.el-kazdadi@inria.fr>, Fabian Schramm <fabian.schramm@inria.fr>, Adrien Taylor <adrien.taylor@inria.fr>"
author_mail = antoine.bambade@inria.fr
license = BSD2
platforms = any
url = https://github.com/Simple-Robotics/proxsuite

project_urls =
    Tracker = https://github.com/Simple-Robotics/proxsuite/issues
    Documentation = https://jcarpent.github.io/proxqp-unofficial/
    Source = https://github.com/Simple-Robotics/proxsuite

keywords =
    quadratic-programming
    solver
    robotics

[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    numpy
